--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "pvtl/voyager-forms",
+    "name": "yellow-three/voyager-forms",
     "description": "Ahoy! - A package to implement forms into Voyager",
     "keywords": [
         "laravel",
@@ -17,8 +17,7 @@
         }
     ],
     "require": {
-        "pvtl/voyager-frontend": "^0.9|^1.0",
-        "tcg/voyager": "^1.1",
+        "tcg/voyager": "^1.*",
         "guzzlehttp/guzzle": "~6.0|~7.0"
     },
     "require-dev": {
@@ -27,20 +26,20 @@
     "autoload": {
         "classmap": [],
         "psr-4": {
-            "Pvtl\\VoyagerForms\\": "src/",
-            "Pvtl\\VoyagerForms\\Database\\": "database/"
+            "YellowThree\\VoyagerForms\\": "src/",
+            "YellowThree\\VoyagerForms\\Database\\": "database/"
         }
     },
     "autoload-dev": {
         "classmap": [],
         "psr-4": {
-            "Pvtl\\VoyagerForms\\Tests\\": "tests/"
+            "YellowThree\\VoyagerForms\\Tests\\": "tests/"
         }
     },
     "extra": {
         "laravel": {
             "providers": [
-                "Pvtl\\VoyagerForms\\Providers\\VoyagerFormsServiceProvider"
+                "YellowThree\\VoyagerForms\\Providers\\VoyagerFormsServiceProvider"
             ]
         }
     },
